syntax = "proto3";
package kratos.api;

option go_package = "agents/app/authn/service/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  reserved 4;
  Server server = 1;
  Data data = 2;
  Auth auth = 3;
  Registry registry = 5;
  Kong kong = 6;
  SystemUser system_user = 7;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
    string migration_source = 3;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}

message Auth {
  reserved 1, 2, 3, 4, 6;
 
  google.protobuf.Duration token_duration = 5;
}

message Registry {
  message Consul {
      string address = 1;
      string scheme = 2;
  }
  Consul consul = 1;
}

message Kong {
  string admin_api = 1;
  string api_key = 2;
}

message SystemUser {
  string username = 1;
  string password = 2;
}